--- a/binding/pom.xml
+++ b/binding/pom.xml
@@ -15,13 +15,42 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<inherited>true</inherited>
+				<configuration>
+					<archive>
+						<!-- no index leads to errors, in some classloaders -->
+						<index>false</index>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>xmlbeans-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>main</id>
+						<goals>
+							<goal>xmlbeans</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<schemaDirectory>src/main/xsd</schemaDirectory>
 					<sourceSchemas>
 						<sourceSchema>aqd/AirQualityReporting.xsd</sourceSchema>
 					</sourceSchemas>
+					<!-- xmlbeans plugin only used to generate the classes not for compiling 
+						or jar generation. -->
+					<noJavac>true</noJavac>
+					<memoryInitialSize>256</memoryInitialSize>
+					<memoryMaximumSize>512</memoryMaximumSize>
+					<download>false</download>
 				</configuration>
 			</plugin>
 		</plugins>
