--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<guice-version>3.0</guice-version>
 		<slf4j-version>1.7.5</slf4j-version>
 		<n52.xml.version>1.1.5</n52.xml.version>
+		<sos.service.url>http://ags.dev.52north.org:6080/arcgis/rest/services/EEA/AirQualitySos/MapServer/exts/52nArcGisSos/</sos.service.url>
 	</properties>
 
 	<modules>
@@ -187,39 +188,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>2.4</version>
-					<inherited>true</inherited>
-					<configuration>
-						<archive>
-							<!-- no index leads to errors, in some classloaders -->
-							<index>false</index>
-							<manifest>
-								<addClasspath>true</addClasspath>
-								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-							</manifest>
-						</archive>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>xmlbeans-maven-plugin</artifactId>
 					<version>2.3.3</version>
-					<executions>
-						<execution>
-							<id>main</id>
-							<goals>
-								<goal>xmlbeans</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<!-- xmlbeans plugin only used to generate the classes not for compiling 
-							or jar generation. -->
-						<noJavac>true</noJavac>
-						<memoryInitialSize>256</memoryInitialSize>
-						<memoryMaximumSize>512</memoryMaximumSize>
-						<download>false</download>
-						<schemaDirectory>target/xmlbeans-xsds/META-INF/xml</schemaDirectory>
-					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
