--- a/binding/pom.xml
+++ b/binding/pom.xml
@@ -93,6 +93,10 @@
 			<groupId>org.n52.sensorweb</groupId>
 			<artifactId>52n-xml-xlink-v110</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.n52.sensorweb</groupId>
+			<artifactId>52n-xml-sensorML-v101</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
