--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.n52.sensorweb</groupId>
+				<artifactId>52n-xml-sensorML-v101</artifactId>
+				<version>${n52.xml.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.n52.sensorweb</groupId>
 				<artifactId>52n-oxf-conversion</artifactId>
 				<version>2.0.0-alpha.3.1</version>
 			</dependency>
