--- a/execution/pom.xml
+++ b/execution/pom.xml
@@ -24,6 +24,23 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>rename-build-specific-config-file</id>
+						<phase>process-test-classes</phase>
+						<configuration>
+							<target>
+								<move file="${project.build.directory}/test-classes/sos-soe_build.properties" tofile="${project.build.directory}/test-classes/sos-soe.properties" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
