--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,10 @@
 					<artifactId>xmlbeans-maven-plugin</artifactId>
 					<version>2.3.3</version>
 				</plugin>
+				<plugin>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>1.7</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
