--- a/execution/pom.xml
+++ b/execution/pom.xml
@@ -24,23 +24,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>rename-build-specific-config-file</id>
-						<phase>process-test-classes</phase>
-						<configuration>
-							<target>
-								<move file="${project.build.directory}/test-classes/sos-soe_build.properties" tofile="${project.build.directory}/test-classes/sos-soe.properties" />
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 
@@ -91,5 +74,32 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 	</dependencies>
+	
+	<profiles>
+		<profile>
+	      	<id>EEA-E2a</id>
+	      	<build>
+	      		<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>rename-build-specific-config-file</id>
+								<phase>process-test-classes</phase>
+								<configuration>
+									<target>
+										<move file="${project.build.directory}/test-classes/sos-soe_EEA.properties" tofile="${project.build.directory}/test-classes/sos-soe.properties" />
+									</target>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+	      		</plugins>
+	      	</build>
+    	</profile>
+	</profiles>
 
 </project>
