temporal filter for ags.dev

--- a/execution/src/test/resources/sos-soe.properties
+++ b/execution/src/test/resources/sos-soe.properties
@@ -3,3 +3,4 @@ observedProperty = http%3A%2F%2Fdd.eionet.europa.eu%2Fvocabulary%2Faq%2Fpollutan
 procedure = http%3A%2F%2Fcdr.eionet.europa.eu%2Fpl%2Feu%2Faqd%2Fd%2Fenvuvt6ea%2FPL_REPORT_D_FOR_2014v2.xml%23SPO_P_PL0518A_1_001
 features = http%3A%2F%2Fcdr.eionet.europa.eu%2Fhu%2Feu%2Faqd%2Fd%2Fenvut_vxq%2FREP_D-HU_OMSZ_20140122_D-001.xml%23SPO_F-HU0002R_00001_500_500
 network = NET-FI016A
+temporalFilter=om:phenomenonTime,2014-02-01T00:00:00/2014-02-20T00:00:00
